exercise results ajax done

--- a/templates/Searchpage.html
+++ b/templates/Searchpage.html
@@ -29,7 +29,6 @@
     </div>
   </form>
 
- <script src="/static/js/exercise.js"></script>
-
+ <!-- <script src="/static/js/exercise.js"></script> -->
 
 {% endblock %}
