--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html>
+
+<!-- <script type="module">import $ from 'jquery';</script>
+<script type="module">import 'fullcalendar';</script> -->
+
 <head>
-<meta charset='utf-8' />
-<link href='static/fullcalendar.min.css' rel='stylesheet' />
-<link href='static/fullcalendar.print.min.css' rel='stylesheet' media='print' />
-<script src='static/lib/moment.min.js'></script>
-<script src='static/lib/jquery.min.js'></script>
-<script src='static/fullcalendar.min.js'></script>
-
-
+    <meta charset='utf-8' />
+    <link href='../static/fullcalendar.min.css' rel='stylesheet' />
+    <link href='../static/fullcalendar.print.min.css' rel='stylesheet' media='print' />
+    <script src='../static/lib/moment.min.js'></script>
+    <script src='../static/lib/jquery.min.js'></script>
+    <script src='../static/fullcalendar.min.js'></script>
 </head>
+
 <body>
-
-
 <hr>
 
 {% for flash in get_flashed_messages() %}
