--- a/templates/choose_day.html
+++ b/templates/choose_day.html
@@ -1,15 +1,89 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Add a training day: </h1>
+<h1>Add a Training Day</h1>
 
-<form action='/choose_training_day' method="POST">
-     <label for="start">Start date:</label>
+<form id="day-selection-form" action='/choose_training_day' method="POST">
+     <!-- <label for="start">Start date:</label> -->
+     <input type="date" id="start" name="workout-date" min="2019-01-01" max="2019-12-31">
+     <input type="submit" name="submit">
+</form>
 
-    <input type="date" id="start" name="workout-date" min="2019-01-01" max="2019-12-31">
+<script>
+    $(function() {    
+        $('#day-selection-form').on('submit', evt => {
+            evt.preventDefault();
+            console.log('hi')
+            const formData = {
+                workout_date: $('#start').val()
+            };
+            console.log(formData)
+        });
+    });
+</script>
 
-<input type="submit" name="submit">
+<h1>Workout Search</h1>
+<form id="exercise-form" action="/choose_training_day" method="GET">
+    <h2>Equipment:</h2>
+    <input type="checkbox" name="equipment" value="Barbell" class="equipment_checkboxes">Barbell
+    <input type="checkbox" name="equipment" value="Bench" class="equipment_checkboxes">Bench
+    <input type="checkbox" name="equipment" value="Dumbbell" class="equipment_checkboxes">Dumbbell
+    <input type="checkbox" name="equipment" value="Gym mat" class="equipment_checkboxes">Gym mat
+    <input type="checkbox" name="equipment" value="Incline bench" class="equipment_checkboxes">Incline bench
+    <input type="checkbox" name="equipment" value="Kettlebell" class="equipment_checkboxes">Kettlebell
+    <input type="checkbox" name="equipment" value="none (bodyweight exercise)" class="equipment_checkboxes">none (bodyweight exercise)
+    <input type="checkbox" name="equipment" value="Pull-up bar" class="equipment_checkboxes">Pull-up bar
+    <input type="checkbox" name="equipment" value="Swiss Ball" class="equipment_checkboxes">Swiss Ball
+    <input type="checkbox" name="equipment" value="SZ-Bar" class="equipment_checkboxes">SZ-Bar
+
+    <h2>Body Parts:</h2>
+    <input type="checkbox" name="category" value="Abs" class="category_checkboxes">Abs
+    <input type="checkbox" name="category" value="Arms" class="category_checkboxes">Arms
+    <input type="checkbox" name="category" value="Back" class="category_checkboxes">Back
+    <input type="checkbox" name="category" value="Calves" class="category_checkboxes">Calves
+    <input type="checkbox" name="category" value="Chest" class="category_checkboxes">Chest
+    <input type="checkbox" name="category" value="Legs" class="category_checkboxes">Legs
+    <input type="checkbox" name="category" value="Shoulders" class="category_checkboxes">Shoulders
+
+    <div>
+    <br>
+    <input id="exercise_submit" type="submit" name="submit">
     </div>
 </form>
 
+<div id="exercise_result">
+</div>
+
+<script>
+    $(function() {    
+        $('#exercise-form').on('submit', evt => {
+            evt.preventDefault();
+
+            const formData = {
+                equipment: $('.equipment_checkboxes:checked').val(),
+                category: $('.category_checkboxes:checked').val()
+            };
+            console.log(formData);
+             
+            $.get('/choose_training_day.json', formData, (results) => {
+                const exercise = results;
+                var list_html = "<br>"
+                list_html += "Results:"
+                list_html += "<ul>";
+                for (var i = 0; i < exercise.length; i++) {
+                    var obj = exercise[i];
+                    list_html += "<li>" + "<a href=\"/search/" + obj.exercise_id + "\">" + obj.name + "</li>";
+                }
+                list_html += "</ul>"
+                $('#exercise_result').html(list_html);
+            });
+        });
+    });
+</script>
+
+<!-- 
+ <script type="text/javascript">
+     console.log("hi");
+ </script>
+ -->
 {% endblock %}
