--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,18 @@
     <script src='../static/lib/moment.min.js'></script>
     <script src='../static/lib/jquery.min.js'></script>
     <script src='../static/fullcalendar.min.js'></script>
+
+    <style>
+        .exercise-form {
+            display: none;
+        }
+        .detail {
+            cursor: pointer;
+        }
+        .detail-form {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
