--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,10 @@
         .detail-form {
             display: none;
         }
+        #calendar {
+            display: inline-block;
+        }
+        
     </style>
 </head>
 
