--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{% if registered != False %}
+  You have succesfully registered. Please log in.
+{% endif %}
   <h1>Login</h1>
   <form action="/login" method="POST">
 
