calendar drag event done

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,15 @@
         }
         .detail-form {
             display: none;
+            box-shadow: 0px 0px 1px 5000px rgba(0,0,0,0.5);
+            position: absolute;
+            width: 500px;
+            height: 300px;
+            z-index: 15;
+            top:70%;
+            left:60%;
+            margin: -100px 100px 100px -150px;
+
         }
         #calendar {
             display: inline-block;
