--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,16 @@
 
 <head>
     <meta charset='utf-8' />
+
     <link href='../static/fullcalendar.min.css' rel='stylesheet' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href='../static/fullcalendar.print.min.css' rel='stylesheet' media='print' />
+
     <script src='../static/lib/moment.min.js'></script>
     <script src='../static/lib/jquery.min.js'></script>
     <script src='../static/fullcalendar.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <style>
         .exercise-form {
@@ -32,7 +37,26 @@
 
         }
         #calendar {
-            display: inline-block;
+            display: inline-box;
+
+
+        }
+        .popover{
+            border: 2px black;
+        }
+        .arrow{
+            border-right-color: red !important;
+        }
+        table, th, td {
+            border:1px solid black;
+        }
+        #wrapper{
+            display: flex;
+            justify-content: center;
+           
+        }
+        #c1, #c2, #calendar{
+            width: 33%;
         }
         
     </style>
