fixed workout_id in session

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,43 @@
         #c1, #c2, #calendar{
             width: 33%;
         }
-        
+        .form-submit-button {
+
+            background: #B9DFFF;
+
+            color: #fff;
+
+            border: 1px solid #eee;
+
+            border-radius: 20px;
+
+            box-shadow: 5px 5px 5px #eee;
+
+            text-shadow:none;
+            display: none;
+            
+
+
+        }
+        .container:hover .form-submit-button {
+            display: inline-block;
+
+            background: #016ABC;
+
+            color: #fff;
+
+            border: 1px solid #eee;
+
+            border-radius: 20px;
+
+            box-shadow: 5px 5px 5px #eee;
+
+            text-shadow:none;
+
+        }
+
+
+
     </style>
 </head>
 
